Address code review feedback: use SoftAssertions, close Workspace, use .toList()
Co-authored-by: chrisrueger <188422+chrisrueger@users.noreply.github.com>