@@ -33,7 +33,6 @@ import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.jar.Manifest;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import org.assertj.core.api.SoftAssertions;
 import org.assertj.core.api.junit.jupiter.SoftAssertionsExtension;
@@ -1598,37 +1597,43 @@ public class ProjectTest {
 	}
 
 	@Test
-	public void testDetectSimpleCircularDependencyInBuildpath() throws Exception {
+	public void testDetectSimpleCircularDependencyInBuildpath(SoftAssertions softly) throws Exception {
 		Workspace ws = getWorkspace(IO.getFile("testresources/ws-circular-buildpath"));
 		try (Project projectA = ws.getProject("project-a")) {
 			projectA.verifyDependencies(false);
-			assertThat(projectA.getErrors()).as("project-a should detect circular dependency").isNotEmpty();
-			assertThat(projectA.getErrors().get(0)).as("error message should mention circular dependency")
+			softly.assertThat(projectA.getErrors()).as("project-a should detect circular dependency").isNotEmpty();
+			softly.assertThat(projectA.getErrors().get(0)).as("error message should mention circular dependency")
 				.containsIgnoringCase("circular");
+		} finally {
+			ws.close();
 		}
 	}
 
 	@Test
-	public void testDetectIndirectCircularDependencyInBuildpath() throws Exception {
+	public void testDetectIndirectCircularDependencyInBuildpath(SoftAssertions softly) throws Exception {
 		Workspace ws = getWorkspace(IO.getFile("testresources/ws-indirect-circular"));
 		try (Project projectA = ws.getProject("project-a")) {
 			projectA.verifyDependencies(false);
-			assertThat(projectA.getErrors()).as("project-a should detect indirect circular dependency").isNotEmpty();
-			assertThat(projectA.getErrors().get(0)).as("error message should mention circular dependency")
+			softly.assertThat(projectA.getErrors()).as("project-a should detect indirect circular dependency").isNotEmpty();
+			softly.assertThat(projectA.getErrors().get(0)).as("error message should mention circular dependency")
 				.containsIgnoringCase("circular");
+		} finally {
+			ws.close();
 		}
 	}
 
 	@Test
-	public void testAllowLinearBuildpathWithoutFalsePositive() throws Exception {
+	public void testAllowLinearBuildpathWithoutFalsePositive(SoftAssertions softly) throws Exception {
 		Workspace ws = getWorkspace(IO.getFile("testresources/ws-linear-buildpath"));
 		try (Project projectA = ws.getProject("project-a")) {
 			projectA.verifyDependencies(false);
 			// Filter out any other errors that may exist, focus on circular dependency errors
 			List<String> circularErrors = projectA.getErrors().stream()
 				.filter(e -> e.toLowerCase().contains("circular"))
-				.collect(Collectors.toList());
-			assertThat(circularErrors).as("project-a should not detect circular dependency in linear chain").isEmpty();
+				.toList();
+			softly.assertThat(circularErrors).as("project-a should not detect circular dependency in linear chain").isEmpty();
+		} finally {
+			ws.close();
 		}
 	}
 }
